--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ a:hover {
 
 #hamburger-nav {
   display: none;
-  margin-left: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .hamburger-menu {
