--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -80,6 +80,8 @@
   }
   .logo {
     font-size: 1.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
   .nav-links {
     flex-direction: column;
