--- a/style.css
+++ b/style.css
@@ -70,6 +70,9 @@ a:hover {
 
 .logo:hover {
   cursor: pointer;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
 }
 
 /* HAMBURGER MENU */
